--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
       </a>
     </div>
     <div class="carousel-item">
-      <a href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/division%20rivals.html">
+      <a href="division rivals.html">
         <img class="d-block w-100" src="https://cloudfront-eu-central-1.images.arcpublishing.com/diarioas/ZMGLOCQNBZAZZMZBWBCIP3XYDY.jpg" alt="Primera Imagen Division rivals" width="650" height="631">
       </a>
     </div>
