--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
       </a>
     </div>
     <div class="carousel-item">
-      <a href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/Squad%20Battle.html">
+      <a href="EAFC24.github.io/Squad Battle.html">
         <img class="d-block w-100" src="https://media.vandal.net/m/9-2023/28/202392812454898_1.jpg.webp" alt="Tercera Imagen Squad Battle" width="650" height="631">
       </a>
     </div>
