--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
 
 
                                     <li class="nav-item pt-1">
-                        <a  button type="button" class="btn btn-light"   href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/Login.html">
+                        <a  button type="button" class="btn btn-light"   href="EAFC24.github.io/Login.html">
                             <img src="https://c0.klipartz.com/pngpicture/811/233/gratis-png-escritorio-de-inicio-de-sesion-de-iconos-de-computadora-thumbnail.png"  width="25" height="25"> 
 
                         </a>
