--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
       </a>
     </div>
     <div class="carousel-item">
-      <a href="EAFC24.github.io/FutChampions.html">
+      <a href="FutChampions.html">
         <img class="d-block w-100" src="https://esi.si.com/.image/t_share/MjAwOTM0OTkyNzE5NjUyMDQ0/ea-fc-24-champs.webp" alt="Segunda Imagen Fut champion" width="650" height="631">
       </a>
     </div>
@@ -138,7 +138,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
       </a>
     </div>
     <div class="carousel-item">
-      <a href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/PaginaTips.html#">
+      <a href="EAFC24.github.io/PaginaTips.html">
         <img class="d-block w-100" src="https://media.vandal.net/i/1280x720/9-2023/22/202392213572882_1.jpg.webp" alt="Cuarta Imagen" width="650" height="631">
       </a>
     </div>
