--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
 
 
                                     <li class="nav-item pt-1">
-                        <a  button type="button" class="btn btn-light"   href="EAFC24.github.io/Login.html">
+                        <a  button type="button" class="btn btn-light"   href="Login.html">
                             <img src="https://c0.klipartz.com/pngpicture/811/233/gratis-png-escritorio-de-inicio-de-sesion-de-iconos-de-computadora-thumbnail.png"  width="25" height="25"> 
 
                         </a>
@@ -133,12 +133,12 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
       </a>
     </div>
     <div class="carousel-item">
-      <a href="EAFC24.github.io/Squad Battle.html">
+      <a href="Squad Battle.html">
         <img class="d-block w-100" src="https://media.vandal.net/m/9-2023/28/202392812454898_1.jpg.webp" alt="Tercera Imagen Squad Battle" width="650" height="631">
       </a>
     </div>
     <div class="carousel-item">
-      <a href="EAFC24.github.io/PaginaTips.html">
+      <a href="PaginaTips.html">
         <img class="d-block w-100" src="https://media.vandal.net/i/1280x720/9-2023/22/202392213572882_1.jpg.webp" alt="Cuarta Imagen" width="650" height="631">
       </a>
     </div>
