--- a/division rivals.html
+++ b/division rivals.html
@@ -45,13 +45,13 @@ c1.{
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav" style="margin-left: auto;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/paginaa.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/Squad%20Battle.html">Squad Battle</a>
+          <a class="nav-link active" aria-current="page" href="Squad Battle.html">Squad Battle</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/FutChampions.html#!">Fut Champion</a>
+          <a class="nav-link active" aria-current="page" href="FutChampions.html">Fut Champion</a>
         </li>
     </div>
   </div>
