--- a/Login.html
+++ b/Login.html
@@ -161,7 +161,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
                 
                 <div>
 
-                    <a href="C:\Users\kmuno\OneDrive\Escritorio\Pagina Web\paginaa.html" class="btn btn-primary btn-block btn-login">
+                    <a href="index.html">
     <div class="form-group">
         <button type="submit">
             <i class="entypo-login"></i> Acceso
