--- a/FutChampions.html
+++ b/FutChampions.html
@@ -44,13 +44,13 @@ body{
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav" style="margin-left: auto;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/paginaa.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/division%20rivals.html">Division Rivals</a>
+          <a class="nav-link active" aria-current="page" href="divisoin rival.html">Division Rivals</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/Squad%20Battle.html">Squad Battle</a>
+          <a class="nav-link active" aria-current="page" href="Squad Battle.html">Squad Battle</a>
         </li>
     </div>
   </div>
