--- a/Squad Battle.html
+++ b/Squad Battle.html
@@ -46,13 +46,13 @@ c1.{
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav" style="margin-left: auto;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="C:file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/paginaa.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/division%20rivals.html">Division Rivals</a>
+          <a class="nav-link active" aria-current="page" href="divisoin rival.html">Division Rivals</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/FutChampions.html#!">Fut Champion</a>
+          <a class="nav-link active" aria-current="page" href="FutChampions.html">Fut Champion</a>
         </li>
         
 
