--- a/PaginaTips.html
+++ b/PaginaTips.html
@@ -143,7 +143,7 @@ href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAOEAAADhCAMAAAAJbSJIAAAAflBM
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav" style="margin-left: auto;">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="file:///C:/Users/yoocr/OneDrive/Escritorio/W.V.G/coso/paginas/paginaa.html">Inicio</a>
+          <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
     </div>
   </div>
