--- a/Squad Battle.html
+++ b/Squad Battle.html
@@ -49,7 +49,7 @@ c1.{
           <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="divisoin rival.html">Division Rivals</a>
+          <a class="nav-link active" aria-current="page" href="division rivals.html">Division Rivals</a>
         </li>
          <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="FutChampions.html">Fut Champion</a>
