--- a/FutChampions.html
+++ b/FutChampions.html
@@ -47,7 +47,7 @@ body{
           <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="divisoin rival.html">Division Rivals</a>
+          <a class="nav-link active" aria-current="page" href="division rivals.html">Division Rivals</a>
         </li>
          <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="Squad Battle.html">Squad Battle</a>
